# parquet_cmp

./: Cargo.toml  README.md
parquet9/: Cargo.toml
parquet9/src/: lib.rs
parquetnext/: Cargo.toml
parquetnext/src/: lib.rs
src/: main.rs  paths.rs
