[package]
name = "parquetnext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parquet = { git = "https://github.com/tustvold/arrow-rs.git", branch="delta-packed-reader" }
arrow = { git = "https://github.com/tustvold/arrow-rs.git", branch="delta-packed-reader" }